# fastperm_python

./: README.md  get_alphabetagamma.c  get_log_permanent.c  header.h  help_functions.c  license.txt  maths.c  maths_help.c  methods.c  methods_sparse.c  pyproject.toml  setup.py  xxhash.h
div/: get_log_permanents.py  test.py  test2.py
