[build-system]
requires = ["hatchling","numpy"]
build-backend = "hatchling.build"
[project]
name = "fastperm"
version = "0.1"
authors = [
  { name="Dennis Christensen", email="author@example.com" },
  { name="Per August Jarval Moen", email="pamoen@math.uio.no" }
]
description = "FASTPERM"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/peraugustmoen/fastperm_python"
